{{$NEXT}}

0.013     2015-08-28 15:24:52 EDT
  - Add [ModuleBuildTiny] as prereq to support installer option
  - Remove makemaker option in favor of installer = MakeMaker::Awesome

0.012     2015-08-28 14:59:32 EDT
  - Add installer option

0.011     2015-08-17 12:24:04 EDT
  - Remove now unnecessary mma_* options

0.010     2015-08-16 22:25:27 EDT
  - Add pluginbundle role Config::Slicer so options can be specified for any plugin
  - Add .travis.yml to minting profile

0.009     2015-08-15 14:11:22 EDT
  - add pod_tests option to use PodSyntaxTests and PodCoverageTests

0.008     2015-08-10 13:32:38 EDT
  - add minting profile

0.007     2015-07-27 13:01:26 EDT
  - add Git::Contributors and MetaNoIndex for better metadata
  - generate dist README with ReadmeAnyFromPod instead of Readme

0.006     2015-07-27 11:51:10 EDT
  - Git-add files newly created during build
  - Support FAKE_RELEASE=1 env var

0.005     2015-07-27 10:24:59 EDT
  - Depend on plugins explicitly used
  - Add package of $self as prereq to allow subclassing

0.004     2015-06-27 00:11:59 EDT
  - Turn off munge_makefile_pl in BumpVersionAfterRelease

0.003     2015-05-22 23:38:07 EDT
  - Always use cpanfile
  - Include files from release in root to allow installation without Dist::Zilla
  - Remove from_cpanfile and include_license options
  - Plugin bundle adds itself as develop requires

0.002     2015-04-10 02:23:03 EDT
  - Update Changes datetime format
  - Use Git::GatherDir
  - Add some more options

0.001     2015-04-08 23:29:46-04:00 America/New_York
  - First release