@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Fix installer option to allow for Build.PL when using [ModuleBuildTiny]
 
 0.013     2015-08-28 15:24:52 EDT
   - Add [ModuleBuildTiny] as prereq to support installer option
